# 3-python-package-exercise-kungheifatchoy

./: Pipfile  README.md  example.py  pyproject.toml  readString.py  realSolution.py
.github/: _readString.py  realSolution.py  test_vertex_form.py
.github/vertex_form/: test_vertex_form.py  vertex_form_function.py  vertex_form_testing.py
.github/workflows/: python-package.yml
simplifyQuadratic/: simplifyQuadratic.py  test_simplifyQuadratic.py
src/pyquadratic/: __main__.py  pyquadratic.py  test_pyquadratic.py
tests/: test_pyquadratic.py
